add markdown for more explanation

--- a/Discrete_continuous_model.ipynb
+++ b/Discrete_continuous_model.ipynb
@@ -5,7 +5,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exponential growth model"
+    "# Exponential growth model example\n",
+    "\n",
+    "Discrete time model\n",
+    "\n",
+    "$N_{t+1} = N_t + R N_t$\n",
+    "\n",
+    "Continuous time model\n",
+    "\n",
+    "$\\frac{dN}{dt} = r N$\n",
+    "\n",
+    "The two models give similar results when $R = e^r - 1$"
    ]
   },
   {
@@ -88,6 +98,14 @@
     "plt.xlabel('Time')\n",
     "plt.ylabel('Population density')\n",
     "plt.legend()\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Interactive graph"
    ]
   },
   {
