figure size adjustment

--- a/Discrete_continuous_model.ipynb
+++ b/Discrete_continuous_model.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,16 +66,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x11fba0c40>"
+       "<matplotlib.legend.Legend at 0x12aa29a30>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,22 +122,22 @@
     "    pc = solve_ivp(exp_continuous, [0, 100], [0.2], \n",
     "                t_eval=time_series, args=(r_val,))\n",
     "    td, pd = iterate(exp_discrete, 0.2, time_series[-1], R_val)\n",
-    "    fig, ax = plt.subplots(1, 1, figsize=(15, 10))\n",
-    "    ax.scatter(pc.t, pc.y, label=f'r = {r_val}')\n",
-    "    ax.scatter(td, pd, label=f'R = {R_val}, \\n e^r - 1 = {np.exp(r_val) - 1}')\n",
-    "    fig.legend(loc='upper left')\n",
-    "    ax.set(xlabel='Time', ylabel='Population density')"
+    "    plt.scatter(pc.t, pc.y, label=f'r = {r_val}')\n",
+    "    plt.scatter(td, pd, label=f'R = {R_val}, \\n e^r - 1 = {np.exp(r_val) - 1}')\n",
+    "    plt.legend(loc='upper left')\n",
+    "    plt.xlabel('Time')\n",
+    "    plt.ylabel('Population density')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "00740a1bc66d40e28d900f28e71e4b16",
+       "model_id": "243a694edd3846e087a18290452a0bfa",
        "version_major": 2,
        "version_minor": 0
       },
@@ -154,7 +154,7 @@
        "<function __main__.plot_interactive(R_val, r_val)>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
