adjust interactive graph

--- a/Discrete_continuous_model.ipynb
+++ b/Discrete_continuous_model.ipynb
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,18 +144,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1f3178a2e2be4303865d610d44afd5c6",
+       "model_id": "c14aeb12fa924128a1f582a6a55d5b1f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(FloatSlider(value=0.2505, description='R_val', max=0.5, min=0.001, step=1e-07), FloatSli…"
+       "interactive(children=(FloatSlider(value=0.050499999999999996, description='R_val', max=0.1, min=0.001, step=1e…"
       ]
      },
      "metadata": {},
@@ -167,14 +167,14 @@
        "<function __main__.plot_interactive(R_val, r_val)>"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ipy.interact(plot_interactive, R_val=(0.001, 0.5, 1e-7), \n",
-    "            r_val=(0.001, 0.5, 1e-7))"
+    "ipy.interact(plot_interactive, R_val=(0.001, 0.1, 1e-7), \n",
+    "            r_val=(0.001, 0.1, 1e-7))"
    ]
   },
   {
