--- a/Discrete_continuous_model.ipynb
+++ b/Discrete_continuous_model.ipynb
@@ -187,7 +187,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "phuong",
+   "display_name": "pnguyen",
    "language": "python",
    "name": "python3"
   },
@@ -201,12 +201,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "821e0045fb359eff2ebc66a698b40aed81c5204dd7719c40236d82829f4a3d28"
+    "hash": "c64a4758ed91b91b06f8881f3ee0895ebfc77067d4a1db808059652052c3307b"
    }
   }
  },
