fix interactive iteration time

--- a/Leslie_matrix.ipynb
+++ b/Leslie_matrix.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
        "[Text(0, 0.5, 'Fraction of population'), Text(0.5, 0, 'Time')]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -157,14 +157,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def interact_recursion(age_0, age_1, age_2, age_3, F2, F3, s0, s1, s2, tmax):\n",
     "    init_pop = np.array([age_0, age_1, age_2, age_3])\n",
     "    L_matrix = np.array([[0, 0, F2, F3], [s0, 0, 0, 0], [0, s1, 0, 0], [0, 0, s2, 0]])\n",
-    "    time, pop_dynamics = iterate(structural_population, init_pop, tmax, cg=L_matrix)\n",
+    "    time, pop_dynamics = iterate(structural_population, init_pop, 100, cg=L_matrix)\n",
     "    col_name = ['Age 0', 'Age 1', 'Age 2', 'Age 3']\n",
     "    data_frame = pd.DataFrame(pop_dynamics, columns=col_name)\n",
     "    figure_size = (15, 5)\n",
@@ -179,20 +179,20 @@
     "                label=\"Total population\")\n",
     "    axes[0].legend(bbox_to_anchor=(0.3, 0.8, 0.3, 0.6))\n",
     "    axes[1].legend(bbox_to_anchor=(0.7, 0.8, 0.3, 0.5))\n",
-    "    axes[0].set(ylabel='Population density (log scale)', xlabel='Time')\n",
-    "    axes[1].set(ylabel='Fraction of population', xlabel='Time')\n",
+    "    axes[0].set(ylabel='Population density (log scale)', xlabel='Time', ylim=(0, 20), xlim=(0, tmax))\n",
+    "    axes[1].set(ylabel='Fraction of population', xlabel='Time', xlim=(0, tmax))\n",
     "    print(data_frame.head(10))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fdf223fc1a8f4766a6560f0fcb1e1c40",
+       "model_id": "f66567ed40f944139f0db9a8b9e2d4b8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -206,7 +206,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2c0a0ac2f70d4bd8b0417d7ef9907116",
+       "model_id": "6fa387004b9840debf0930eafbf6dd35",
        "version_major": 2,
        "version_minor": 0
       },
